RESOLVED FIXED219259
REGRESSION(STP116): wpt.live/webrtc/RTCRtpTransceiver.https.html crashes on load
https://bugs.webkit.org/show_bug.cgi?id=219259
Summary REGRESSION(STP116): wpt.live/webrtc/RTCRtpTransceiver.https.html crashes on load
Sam Sneddon [:gsnedders]
Reported 2020-11-23 08:25:55 PST
https://wpt.live/webrtc/RTCRtpTransceiver.https.html crashes both on Catalina on Azure Pipelines and on Big Sur locally in STP116. This appears to be a regression from STP115.
Attachments
Patch (7.36 KB, patch)
2020-11-24 01:05 PST, youenn fablet
no flags
Patch (8.88 KB, patch)
2020-12-01 02:10 PST, youenn fablet
no flags
youenn fablet
Comment 1 2020-11-23 09:35:11 PST
Thanks for the report, seems like a null pointer crash in the checkStopAfterCreateOfferWithReusedMsection subtest. This might be fall outs of the new implementation of transceiver.stop and we might want to switch to the new standard compliant version.
youenn fablet
Comment 2 2020-11-24 01:05:10 PST
Radar WebKit Bug Importer
Comment 3 2020-11-26 03:31:20 PST
youenn fablet
Comment 4 2020-12-01 02:10:01 PST
EWS
Comment 5 2020-12-01 09:32:13 PST
Committed r270304: <https://trac.webkit.org/changeset/270304> All reviewed patches have been landed. Closing bug and clearing flags on attachment 415115 [details].
Note You need to log in before you can comment on or make changes to this bug.