REGRESSION(STP116): wpt.live/webrtc/RTCRtpTransceiver.https.html crashes on load https://bugs.webkit.org/show_bug.cgi?id=219259

Reviewed by Eric Carlson.

Source/WebCore:

Make use of StopStandard instead of the old StopInternal method.
Covered by rebased tests.

* Modules/mediastream/RTCPeerConnection.cpp:
(WebCore::RTCPeerConnection::addInternalTransceiver):
* Modules/mediastream/RTCPeerConnection.h:
* Modules/mediastream/RTCRtpTransceiver.cpp:
(WebCore::RTCRtpTransceiver::setConnection):
(WebCore::RTCRtpTransceiver::stop):
* Modules/mediastream/RTCRtpTransceiver.h:
* Modules/mediastream/RTCRtpTransceiver.idl:
* Modules/mediastream/libwebrtc/LibWebRTCRtpTransceiverBackend.cpp:
(WebCore::LibWebRTCRtpTransceiverBackend::stop):

LayoutTests:

* TestExpectations: mark test as flaky, as identified by EWS and in results.webkit.org since resyncing WPT tests.


Canonical link: https://commits.webkit.org/232006@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270304 268f45cc-cd09-0410-ab3c-d52691b4dbfc